[gd_scene load_steps=7 format=3 uid="uid://dm3mqma8e3lj5"]

[ext_resource type="Script" path="res://scenes/levels/End/end.gd" id="1_kukr3"]
[ext_resource type="Texture2D" uid="uid://u3huoouqi0n3" path="res://assets/img/bg1.jpg" id="1_u7l1w"]
[ext_resource type="FontFile" uid="uid://bry606wi80okf" path="res://assets/img/Kenney Mini Square Mono.ttf" id="2_l31gj"]
[ext_resource type="Texture2D" uid="uid://bbn2ssknmp78a" path="res://assets/img/bubble_black_white.png" id="3_d5682"]

[sub_resource type="LabelSettings" id="LabelSettings_nqxvt"]
font = ExtResource("2_l31gj")
font_size = 100
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2m1ab"]
font = ExtResource("2_l31gj")
font_size = 50
font_color = Color(0, 0, 0, 1)

[node name="End" type="Node2D"]
script = ExtResource("1_kukr3")

[node name="Bg1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(960, 540)
texture = ExtResource("1_u7l1w")
metadata/_edit_lock_ = true

[node name="BubbleSprite" type="Sprite2D" parent="."]
position = Vector2(1000, 1000)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_d5682")

[node name="UI" type="CanvasLayer" parent="."]

[node name="LabelGameOver" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -336.0
offset_top = 67.0
offset_right = 339.0
offset_bottom = 192.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_nqxvt")

[node name="LabelCoins" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -704.0
offset_top = 534.0
offset_right = -355.0
offset_bottom = 598.0
grow_horizontal = 2
text = "COINS: 0"
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelText0" type="Label" parent="UI"]
offset_left = 1100.0
offset_top = 970.0
offset_right = 1700.0
offset_bottom = 1034.0
text = "Nothing, REALLY?"
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelText025" type="Label" parent="UI"]
visible = false
offset_left = 1100.0
offset_top = 795.0
offset_right = 1700.0
offset_bottom = 859.0
text = "HMM, NOT GREAT..."
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelText050" type="Label" parent="UI"]
visible = false
offset_left = 1100.0
offset_top = 620.0
offset_right = 1700.0
offset_bottom = 684.0
text = "I'VE SEEN BETTER"
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelText075" type="Label" parent="UI"]
visible = false
offset_left = 1100.0
offset_top = 445.0
offset_right = 1700.0
offset_bottom = 509.0
text = "OK I GUESS"
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelText100" type="Label" parent="UI"]
visible = false
offset_left = 1100.0
offset_top = 270.0
offset_right = 1700.0
offset_bottom = 334.0
text = "CHEATER!!!"
label_settings = SubResource("LabelSettings_2m1ab")

[node name="LabelQuitContinue" type="Label" parent="UI"]
offset_left = 78.0
offset_top = 814.0
offset_right = 791.0
offset_bottom = 1009.0
text = "PRESS <ESC> TO QUIT
OR ANY OTHER KEY TO
CONTINUE"
label_settings = SubResource("LabelSettings_2m1ab")
